<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">sitewaerts PDF Viewer</string>
    <string name="splash_screen_message">This app is not intended to work on its own but to be invoked from cordova/phonegap.</string>
    
    <string name="action_navigation_view">Navigation</string>
    <string name="action_open_with">Open with</string>
    <string name="action_print">Print</string>
    <string name="action_email">Email</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_search">Search</string>
    
    <string name="email_chooser_title">Send email&#8230;</string>
    <string name="email_text">shared via %1$s</string>
    
    <string name="open_with_chooser_title">Open document with&#8230;</string>
    
    <string name="search_placeholder">enter search term...</string>
</resources>
